--- a/frameworks/react/src/index.css
+++ b/frameworks/react/src/index.css
@@ -13,32 +13,32 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.card {
+  width: 50vw;
+  font-size: 32px;
+  color: black;
+  border: 0.2em solid #666;
+  box-sizing: border-box;
+  background-color: cadetblue;
+}
+.card > * {
+  border: 0.1em solid #eee;
+}
+
+.card [data-slot="header"],
+.card [data-slot="content"],
+.card [data-slot="footer"] {
+  background-color: rebeccapurple;
 }
